# download-manager

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: buffer.h  connection.h  connection_h  connection_manager.h  definitions.h  download_state_manager.h  downloader.h  file_io.h  ftp_downloader.h  ftp_request_manager.h  ftp_transceiver.h  http_downloader.h  http_general.h  http_proxy.h  http_request_manager.h  http_transceiver.h  https_downloader.h  https_socket_ops.h  https_transceiver.h  info_extractor.h  logger.h  manager.h  node.h  pattern_finder.h  plain_transceiver.h  request_manager.h  secure_transceiver.h  socket_ops.h  state_manager.h  thread.h  transceiver.h  units.h  url_info.h  url_ops.h  url_parser.h  writer.h
src/: CMakeLists.txt  buffer.cpp  connection.cpp  connection_manager.cpp  download_state_manager.cpp  downloader.cpp  file_io.cpp  ftp_downloader.cpp  ftp_request_manager.cpp  ftp_transceiver.cpp  http_downloader.cpp  http_general.cpp  http_proxy.cpp  http_request_manager.cpp  http_transceiver.cpp  https_downloader.cpp  https_socket_ops.cpp  https_transceiver.cpp  info_extractor.cpp  logger.cpp  manager.cpp  node.cpp  pattern_finder.cpp  plain_transceiver.cpp  request_manager.cpp  secure_transceiver.cpp  socket_ops.cpp  state_manager.cpp  thread.cpp  transceiver.cpp  url_info.cpp  url_ops.cpp  url_parser.cpp  writer.cpp
test/: CMakeLists.txt  buffer_test.cpp  connection_manager_test.cpp  info_extractor_test.cpp  state_manager_test.cpp  test_utils.h  transceiver_test.cpp  units_tests.cpp  url_ops_test.cpp  url_parser_test.cpp
tests/: CMakeLists.txt  buffer_test.cpp  download_state_manager_test.cpp  file_io_test.cpp  state_manager_test.cpp  test_utils.cpp  test_utils.h  transceiver_test.cpp  url_info_test.cpp  url_ops_test.cpp  writer_test.cpp
